[project]
name = "paper-study-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "langchain-teddynote>=0.3.45",
    "pandas>=2.2.3",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
